    - Stop reading on edge connections when their corresponding circuit
      buffers are full; start again as the circuits empty out.

  o Security fixes:
    - Directory authorities now call routers stable if they have an
      uptime of at least 30 days, even if that's not the median uptime
      in the network. Implements proposal 107, suggested by Kevin Bauer
      and Damon McCoy.

  o Minor features (build):
    - Make autoconf search for libevent, openssl, and zlib consistently.
    - Update deprecated macros in configure.in
    - When warning about missing headers, tell the user to let us
      know if the compile succeeds anyway, so we can downgrade the
      warning.
    - Include the current subversion revision as part of the version
      string: either fetch it directly if we're in an SVN checkout, do
      some magic to guess it if we're in an SVK checkout, or use
      the last-detected version if we're building from a .tar.gz.

  o Minor features (logging):
    - Always prepend "Bug: " to any log message about a bug.
    - Put a platform string (e.g. "Linux i686") in the startup log
      message, so when people paste just their logs, we know if it's
      openbsd or windows or what.

  o Minor features (directory system):
    - Directory authorities accept and serve "extra info" documents for
      routers.  These documents contain fields from router descriptors that
      aren't usually needed, and that use a lot of excess bandwidth. Once
      these fields are removed from router descriptors, the bandwidth savings
      should be about 60%.  (Limitation: servers do not yet upload extra-info
      documents; authorities do not yet cache them.)  [Partially implements
      proposal 104.]

  o Minor features (other):
    - More unit tests.

  o Removed features:
    - Removed support for the old binary "version 0" controller protocol.
      This has been deprecated since 0.1.1, and warnings have been issued